<resources>
    <string name="app_name">My Music App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Đăng Ký</string>
    <string name="user_name">Tên Tài Khoản</string>
    <string name="email">Email</string>
    <string name="password">Mật Khẩu  ( Phải lớn hơn hoặc bằng 6 )</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="yesAcount">Bạn đã có tài khoản?</string>
    <string name="noAcount">Bạn chưa có tài khoản?</string>

    <string name="sign_in">Đăng Nhập</string>
    <string name="reset_password">Đặt lại mật khẩu</string>
    <string name="thongBao_resetPass">Nhập email của bạn đã đăng ký!</string>
    <string name="forget_password">Quên mật khẩu</string>
    <string name="go_back"><![CDATA[< Quay lại]]></string>

    <string name="url_img">https://i.pinimg.com/564x/97/23/0a/97230aa258a6e4fc403bbd9f506e8ace.jpg</string>
    <string name="url_img1">https://i.pinimg.com/564x/3f/e8/40/3fe84073c5ae4002087863558d1967e9.jpg</string>
    <string name="url_img2">https://i.pinimg.com/750x/65/8b/58/658b582d8e3544604f33ca80a0f79545.jpg</string>
    <string name="url_img3">https://i.pinimg.com/564x/8e/21/00/8e210076c8eba59dd3b3b2c2cceb7627.jpg</string>
    <string name="url_img4">https://i.pinimg.com/564x/41/30/54/4130548a73c9d7029e5ef91072a4110a.jpg</string>

    <string name="url_music"></string>
    <string name="url_music2"></string>
    <string name="url_music3"></string>
    <string name="url_music4"></string>
    <string name="url_music5"></string>
    <string name="url_music6"></string>
    <string name="url_music7"></string>
    <string name="ho_so">Hồ Sơ</string>
    <string name="bio">Đến cùng ta có được mèo? Hay mèo ân sủng cho ta tiến vào cuộc sống của nó!</string>
    <string name="log_out">Đăng xuất</string>
    <string name="tim_kiem_bh">Tìm kiếm bài hát</string>
</resources>