<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Fragments.UserFragment">
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ho_so"
        android:textColor="@color/color_logo_0"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        >

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="220sp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:background="@drawable/edittext_background"
            android:gravity="center"
            android:padding="5dp"
            android:text="Tên user"
            android:textColor="@color/color_logo_0"
            android:textSize="22sp" />
        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/txt_name"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="100dp">
            <ImageView
                android:id="@+id/img_user"
                android:layout_width="200dp"
                android:layout_height="200dp"/>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:padding="20dp"
            android:layout_below="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="150dp">
            <ImageView
                android:layout_width="20dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_bio"
                app:tint="@color/whiteSong" />
            <TextView
                android:id="@+id/txt_bio"
                android:padding="10dp"
                android:textColor="@color/white"
                android:text="@string/bio"
                android:lines="3"
                android:textSize="19sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/play_list_user"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/user"
        android:gravity="center"
        android:text="Danh Sách Play List"
        app:backgroundTint="@null"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"
        />

    <Button
        android:id="@+id/log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edittext_background"
        android:padding="10dp"
        android:text="@string/log_out"
        android:textColor="@color/white"
        app:backgroundTint="@null"
        app:layout_constraintTop_toBottomOf="@+id/play_list_user"
        tools:layout_editor_absoluteX="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>